fix(tree): parent connector not centered

--- a/family-tree/src/app/app.component.scss
+++ b/family-tree/src/app/app.component.scss
@@ -70,11 +70,6 @@
         .person {
           width: 50%;
         }
-
-        .parent-link, .name {
-          width: 90%;
-          margin: 0 auto;
-        }
       }
     }
   }
